# AIE_exercise

AI_01/: solution.py
AI_02/llm-app/: .env.example  main.py  pyproject.toml
AI_03/: pipeline.py
AI_04/: .env.example  compare.py
AI_05/: prompt_lab.py
AI_06/: assistant.py  requirements.txt
AI_07/: classify.py
AI_08/: my_rag.py
AI_09/: ask.py  index.py
AI_09/data/: company_info.txt
